# SHDL

./: .gitignore  API.md  C_API.md  DOCS.md  LANGUAGE_SPEC.md  QUICKSTART.md  README.md  adder16.c  adder16.shdl  bytereg.py  compiler.py  defaults.c  generators.py  main.ipynb  new_SHDL.shdl  pyproject.toml  register16.c  register16.shdl  shdl_compiler.py  shdl_driver.py  shdlc  todo.md
.github/workflows/: deploy-docs.yml  publish.yml  test.yml
SHDL_components/: 16bitAdder.shdl  adderSubtractor16.shdl  alu16.shdl  bytereg.shdl  fullAdder.shdl  lastBitInverter.shdl  mux2to1_16.shdl  notTwoAnds.shdl  programCounter.shdl  registerFile4.shdl  twoAnds.shdl
docs/: README.md  docusaurus.config.ts  package-lock.json
docs/docs/: intro.md
docs/docs/architecture/: _category_.json  base-shdl.md  compiler-internals.md  flattening-pipeline.md  overview.md  pyshdl-internals.md
docs/docs/debugger/: _category_.json  breakpoints.md  commands.md  common-problems.md  debug-build.md  getting-started.md  hierarchy.md  inspection.md  overview.md  python-api.md  scripting.md  waveforms.md
docs/docs/examples/: 8-bit-adder.md  _category_.json  comparator.md  decoder.md  full-adder.md  half-adder.md  multiplexer.md  register.md
docs/docs/getting-started/: _category_.json  first-circuit.md  installation.md  using-pyshdl.md
docs/docs/language-reference/: _category_.json  components.md  connections.md  constants.md  errors.md  generators.md  imports.md  lexical-elements.md  overview.md  signals.md  standard-gates.md
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.tsx
docs/static/: CNAME
examples/: interacting.py
examples/SHDL_components/: add100.shdl  addSub16.shdl  adder16.shdl  alu.shdl  and16inputs.shdl  bitwise_and16.shdl  bitwise_not16.shdl  bitwise_or16.shdl  bitwise_xor16.shdl  clock.shdl  demux.shdl  flagsZN.shdl  fullAdder.shdl  mux2.shdl  mux2_16.shdl  mux8.shdl  mux8_16.shdl  negate16.shdl  or16inputs.shdl  reg16.shdl  shift1.shdl
src/PySHDL/: __init__.py  circuit.py  cli.py  shdlc.py
src/SHDB/: __init__.py
src/SHDL/: __init__.py  errors.py  errors_old.py  source_map.py
src/SHDL/bus_compiler/: __init__.py  analyzer.py  codegen.py  compiler.py  debug_codegen.py  debug_info_gen.py  graph.py
src/SHDL/compiler/: __init__.py  analyzer.py  ast.py  cli.py  codegen.py  compiler.py  debug_codegen.py  debug_info_gen.py  lexer.py  parser.py
src/SHDL/debugger/: __init__.py  circuit.py  cli.py  controller.py  debuginfo.py  sourcemap.py  symbols.py
src/SHDL/driver/: __init__.py  circuit.py  exceptions.py
src/SHDL/flattener/: __init__.py  ast.py  flattener.py  lexer.py  parser.py  tokens.py
src/SHDL/semantic/: __init__.py  analyzer.py  connection.py  resolver.py  type_check.py  warnings.py
tests/: README.md  TEST_REPORT.md  conftest.py  test_bus_compiler.py  test_debugger.py  test_errors.py  test_shdl.py  test_shdl_comprehensive.py
tests/circuits/: test_adder4.shdl  test_adder8.shdl  test_bitwise.shdl  test_comparator.shdl  test_constants.shdl  test_decoder.shdl  test_gates.shdl  test_generators.shdl  test_half_full_adder.shdl  test_mux.shdl
