[project]
name = "PySHDL"
version = "0.2.0"
description = "SHDL (Simple Hardware Description Language) is a minimal HDL designed for creating digital circuits and easily simulating them. It compiles directly to C for maximum performance and portability. PySHDL is the Python interface for SHDL."
readme = "README.md"
authors = [
    { name = "rafa-rrayes", email = "rafa@rayes.com.br" }
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/rafa-rrayes/SHDL"
Repository = "https://github.com/rafa-rrayes/SHDL"
Documentation = "https://github.com/rafa-rrayes/SHDL/blob/master/DOCS.md"

[project.scripts]
shdlc = "SHDL.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/SHDL", "src/SHDB"]